sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:8: error: not found: value i
    i = 0
    ^AlgCombSort:9: error: not found: value i
    while (plusPetit(i + ecart, ecart)) {
                     ^AlgCombSort:11: error: not found: value i
      echange(i + ecart, ecart)
              ^AlgCombSort:12: error: not found: value i
      i += 1
      ^AlgCombSort:14: error: not found: value echangeFait
  } while(ecart > 1 || echangeFait)
                       ^